--- a/templates/default.phtml
+++ b/templates/default.phtml
@@ -1,6 +1,12 @@
 {% extends "base.phtml" %}
 
 {% block body %}
-    <h1>{{ title }}</h1>
-    {{ content | raw }}
+<div class="container">
+    <div class="row">
+        <div class="col-md">
+            <h1>{{ title }}</h1>
+            {{ content | raw }}
+        </div>
+    </div>
+</div>
 {% endblock %}
